Ejercicios Modulo 03 - Kubernetes/Ejercicio 3/todo-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-deployment
spec:
  selector:
    matchLabels:
      app: todo-api-svc
  template:
    metadata:
      labels:
        app: todo-api-svc
    spec:
      containers:
      - name: todo-api
        image: alezanshe/todo-api
        ports:
        - containerPort: 3000
