Ejercicios Modulo 03 - Kubernetes/Ejercicio 3/todo-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-svc
spec:
  selector:
    app: todo-api-svc
  ports:
  - port: 3000
    targetPort: 3000
