Ejercicios Modulo 03 - Kubernetes/Ejercicio 3/todo-front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-front-svc
spec:
  selector:
    app: todo-front-svc
  ports:
  - port: 80
    targetPort: 80
