Ejercicios Modulo 03 - Kubernetes/Ejercicio 3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app
spec:
  ingressClassName: nginx
  rules:
  - host: lc-todo.edu
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: todo-api-svc
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-front-svc
            port:
              number: 80
